--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games</title>
+    <title>@GusGusdev Games Section</title>
   </head>
 
   <body class="body home">
