--- a/games/rock.html
+++ b/games/rock.html
@@ -4,41 +4,96 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
+    <title>Rock, Paper, Scissors, Lizard & SPOCK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="body rock">
+  <body class="body">
     <main class="main">
       <section class="section pc_board">
 
         <div class="rock-paper_pc" id="hand_container_pc">
-          <div class="hand_pc"><i class="far fa-hand-lizard ipc"></i></div>
           <div class="hand_pc"><i class="far fa-hand-spock ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-scissors ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-paper ipc"></i></div>
+          <div class="hand_pc"><i class="far fa-hand-lizard ipc"></i></div>
           <div class="hand_pc"><i class="far fa-hand-rock ipc"></i></div>
+          <div class="hand_pc"><i class="far fa-hand-paper ipc"></i></div>
+          <div class="hand_pc"><i class="far fa-hand-scissors ipc"></i></div>
         </div>
 
       </section>
 
-      <section class="section">
-        <button class="btn" id="lets_play">Go!!</button>
+      <section class="section central">
+        <div class="wrapper_lets-play">
+          <div class="indicator"></div>
+          <button class="btn btn_play" id="lets_play"></button>
+        </div>
       </section>
 
-      <section class="section">
+      <section class="section dashboard">
 
-        <button class="btn play" id="lizard"><i class="far fa-hand-lizard iplayer"></i></button>
-        <button class="btn play" id="spock"><i class="far fa-hand-spock iplayer"></i></button>
-        <button class="btn play" id="scissors"><i class="far fa-hand-scissors iplayer"></i></button>
-        <button class="btn play" id="paper"><i class="far fa-hand-paper iplayer"></i></button>
-        <button class="btn play" id="rock"><i class="far fa-hand-rock iplayer"></i></button>
+        <div class="stats" id="card-stats">
+          <div class="front">
+            <h1 class="welcome">Enjoy the game!!</h1>
+            <p class="text">
+              3 seconds for play, otherwise the system assign random selection.
+            </p>
+            <table class="table">
+              <thead class="thead">
+                <tr class="tr">
+                  <th class="th" colspan="4">
+                    ..::· Game Stats ·::..
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="tbody">
+                <tr class="tr">
+                  <td class="td">Games</td>
+                  <td class="td">Win</td>
+                  <td class="td">Lose</td>
+                  <td class="td">Tied</td>
+                </tr>
+                <tr>
+                  <td class="td game-stats" id="games">0</td>
+                  <td class="td game-stats" id="win">0</td>
+                  <td class="td game-stats" id="lose">0</td>
+                  <td class="td game-stats" id="tied">0</td>
+                </tr>
+                <tr>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="back">
+            <button class="btn play" id="lizard"><i class="far fa-hand-lizard iplayer"></i></button>
+            <button class="btn play" id="spock"><i class="far fa-hand-spock iplayer"></i></button>
+            <button class="btn play" id="scissors"><i class="far fa-hand-scissors iplayer"></i></button>
+            <button class="btn play" id="paper"><i class="far fa-hand-paper iplayer"></i></button>
+            <button class="btn play" id="rock"><i class="far fa-hand-rock iplayer"></i></button>
+          </div>
+        </div>
 
       </section>
-
-
     </main>
+
+    <nav class="nav">
+      <ul class="nav_container">
+        <li class="li_link">
+          <a href="/" class="link">Homepage</a>
+        </li>
+        <li class="li_link">
+          <a href="/games" class="link">Games</a>
+        </li>
+        <li class="li_link">
+          <a href="/#portfolio" class="link">Portfolio</a>
+        </li>
+        <li class="li_link">
+          <a href="/#about" class="link">Contact</a>
+        </li>
+      </ul>
+
+    </nav>
 
     <footer class="footer">
       <span id="leyend_footer"></span>
