timeout optimization, show winner-last move, footer, nav & media queries

--- a/games/index.html
+++ b/games/index.html
@@ -11,7 +11,7 @@
 
     <div class="clock">
       <div class="clock-container">
-        <div class="wrapper">
+        <div class="wrapper" id="clock-hands">
           <div class="hours"></div>
           <div class="minutes"></div>
           <div class="seconds"></div>
