--- a/games/rock.html
+++ b/games/rock.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors, Lizard & SPOCK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="body">
     <main class="main">
       <section class="section pc_board">
+        <h1 class="welcome"> Rock, Paper, Scissors, Lizard & SPOCK </h1>
 
         <div class="rock-paper_pc" id="hand_container_pc">
           <div class="hand_pc"><i class="far fa-hand-spock ipc"></i></div>
@@ -25,8 +27,8 @@
 
       <section class="section central">
         <div class="wrapper_lets-play">
-          <div class="indicator"></div>
-          <button class="btn btn_play" id="lets_play"></button>
+          <div class="indicator" id="mini-inidcator"></div>
+          <button class="btn btn_play" id="lets_play">Lets Play !!</button>
         </div>
       </section>
 
@@ -34,19 +36,26 @@
 
         <div class="stats" id="card-stats">
           <div class="front">
-            <h1 class="welcome">Enjoy the game!!</h1>
-            <p class="text">
-              3 seconds for play, otherwise the system assign random selection.
-            </p>
             <table class="table">
               <thead class="thead">
                 <tr class="tr">
                   <th class="th" colspan="4">
-                    ..::· Game Stats ·::..
+                    <h2 class="title_table">..::· Game Stats ·::..</h2>
                   </th>
                 </tr>
               </thead>
               <tbody class="tbody">
+                <tr class="tr plus">
+                  <td class="td" colspan="2">
+                    <p class="text">Winner: </p>
+                    <p class="text">.:: <span class="inner_text" id="show-winner"></span>::.</p>
+
+                  </td>
+                  <td class="td" colspan="2">
+                    <p class="text">Last Move: </p>
+                    <p class="text">.::<span class="inner_text" id="last-move"></span>::.</p>
+                  </td>
+                </tr>
                 <tr class="tr">
                   <td class="td">Games</td>
                   <td class="td">Win</td>
@@ -80,10 +89,10 @@
     <nav class="nav">
       <ul class="nav_container">
         <li class="li_link">
-          <a href="/" class="link">Homepage</a>
+          <a href="/games" class="link">Games</a>
         </li>
         <li class="li_link">
-          <a href="/games" class="link">Games</a>
+          <a href="/" class="link">Home</a>
         </li>
         <li class="li_link">
           <a href="/#portfolio" class="link">Portfolio</a>
@@ -97,6 +106,18 @@
 
     <footer class="footer">
       <span id="leyend_footer"></span>
+      <p class="text social">
+        <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
+        <span class="text">Repo: <a href="https://github.com/gusram01/games/tree/master/games/rock" target="_blank">
+            Rock, Paper...
+            Game </a></span>
+      </p>
+      <p class="text">
+        Wallpaper from <a class="link" href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/"
+          target="_blank">Pexels®</a>
+        by <a class="link" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco Ungaro</a>
+      </p>
     </footer>
 
   </body>
