simon says pre-logic

--- a/games/home/index.html
+++ b/games/home/index.html
@@ -39,7 +39,7 @@
 
     <main class="main">
       <div class="btn game_rock" id="rock"><a class="link" href="/games/rock">Rock - Paper</a></div>
-      <div class="btn game_simon" id="simon"><a class="link" href="#">Simon - Game</a></div>
+      <div class="btn game_simon" id="simon"><a class="link" href="/games/simon">Simon - Game</a></div>
     </main>
 
     <footer class="footer">
