ligth changes for ts

--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -20,16 +20,19 @@
           Simon Says
         </h1>
       </header>
+
       <main class="main">
 
         <section class="section board">
-          <button class="btn btn_play" id="lets_play">Lets Play !!</button>
-          <div class="button_container">
-            <button class="btn color blue" id="blue"></button>
-            <button class="btn color red" id="red"></button>
-            <button class="btn color green" id="green"></button>
-            <button class="btn color yellow" id="yellow"></button>
-            <button class="btn color white" id="white"></button>
+          <div class="wrapper_board">
+            <button class="btn btn_play" id="lets_play">Lets Play !!</button>
+            <div class="button_container">
+              <button class="btn color blue" id="blue"></button>
+              <button class="btn color red" id="red"></button>
+              <button class="btn color green" id="green"></button>
+              <button class="btn color yellow" id="yellow"></button>
+              <button class="btn color white" id="white"></button>
+            </div>
           </div>
         </section>
 
