--- a/games/home/index.html
+++ b/games/home/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@GusGusdev Games Section</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body class="body home">
@@ -42,9 +46,42 @@
       <div class="btn game_simon" id="simon"><a class="link" href="/games/simon">Simon - Game</a></div>
     </main>
 
+    <nav class="nav">
+      <ul class="nav_container">
+        <li class="li_link">
+          <a href="/" class="link link_nav">Home</a>
+        </li>
+        <li class="li_link">
+          <a href="/games" class="link link_nav">Games</a>
+        </li>
+        <li class="li_link">
+          <a href="/#portfolio" class="link link_nav">Portfolio</a>
+        </li>
+        <li class="li_link">
+          <a href="/#about" class="link link_nav">Contact</a>
+        </li>
+      </ul>
+
+    </nav>
+
     <footer class="footer">
-      <span id="leyend_footer">Gus Ramírez, 2020</span>
+      <span id="leyend_footer"></span>
+      <p>
+        <a class="link link_footer-login" href="https://twitter.com/GusGusdev" target="_blank"><i
+            class="fab fa-twitter"></i></a>
+        <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
+            class="fab fa-github"></i></a>
+        <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/project-videos" target="_blank">
+            API-Movies Info </a></span>
+      </p>
+      <p>
+        Wallpaper from <a class="link link_footer-login"
+          href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/" target="_blank">Pexels®</a>
+        by <a class="link link_footer-login" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco
+          Ungaro</a>
+      </p>
     </footer>
+
 
   </body>
 
