compare array player vs pc 1-1

--- a/games/home/index.html
+++ b/games/home/index.html
@@ -11,76 +11,80 @@
 
   </head>
 
-  <body class="body home">
+  <body class="body">
+    <div class="home">
 
-    <div class="clock">
-      <div class="clock-container">
-        <div class="wrapper" id="clock-hands">
-          <div class="hours"></div>
-          <div class="minutes"></div>
-          <div class="seconds"></div>
-          <div class=" numbers" id="cover">
-            <div class="number m0"><span class="digit">12</span><span class="digit">6</span></div>
-            <div class="number m1"><span class="digit">11</span><span class="digit">5</span></div>
-            <div class="number m2"><span class="digit">10</span><span class="digit">4</span></div>
-            <div class="number m3"><span class="digit">9</span><span class="digit">3</span></div>
-            <div class="number m4"><span class="digit">8</span><span class="digit">2</span></div>
-            <div class="number m5"><span class="digit">7</span><span class="digit">1</span></div>
+      <div class="clock">
+        <div class="clock-container">
+          <div class="wrapper" id="clock-hands">
+            <div class="hours"></div>
+            <div class="minutes"></div>
+            <div class="seconds"></div>
+            <div class=" numbers" id="cover">
+              <div class="number m0"><span class="digit">12</span><span class="digit">6</span></div>
+              <div class="number m1"><span class="digit">11</span><span class="digit">5</span></div>
+              <div class="number m2"><span class="digit">10</span><span class="digit">4</span></div>
+              <div class="number m3"><span class="digit">9</span><span class="digit">3</span></div>
+              <div class="number m4"><span class="digit">8</span><span class="digit">2</span></div>
+              <div class="number m5"><span class="digit">7</span><span class="digit">1</span></div>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <header class="header">
+        <h1 class="inside_header">
+          Game Section
+        </h1>
+        <h2 class="inside_header">
+          Enjoy it!!
+        </h2>
+      </header>
+
+      <main class="main">
+        <div class="btn game_rock" id="rock"><a class="link" href="/games/rock">Rock - Paper</a></div>
+        <div class="btn game_simon" id="simon"><a class="link" href="/games/simon">Simon - Game</a></div>
+      </main>
+
+      <nav class="nav">
+        <ul class="nav_container">
+          <li class="li_link">
+            <a href="/apimovies" class="link link_nav">APInfovies</a>
+          </li>
+          <li class="li_link">
+            <a href="/" class="link link_nav">Main</a>
+          </li>
+          <li class="li_link">
+            <a href="/#portfolio" class="link link_nav">Portfolio</a>
+          </li>
+          <li class="li_link">
+            <a href="/#about" class="link link_nav">Contact</a>
+          </li>
+        </ul>
+
+      </nav>
+
+      <footer class="footer">
+        <span id="leyend_footer"></span>
+        <p>
+          <a class="link link_footer-login" href="https://twitter.com/GusGusdev" target="_blank"><i
+              class="fab fa-twitter"></i></a>
+          <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
+              class="fab fa-github"></i></a>
+          <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/project-videos"
+              target="_blank">
+              API-Movies Info </a></span>
+        </p>
+        <p>
+          Wallpaper from <a class="link link_footer-login"
+            href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/" target="_blank">Pexels®</a>
+          by <a class="link link_footer-login" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco
+            Ungaro</a>
+        </p>
+      </footer>
+
     </div>
-
-
-    <header class="header">
-      <h1 class="inside_header">
-        Game Section
-      </h1>
-      <h2 class="inside_header">
-        Enjoy it!!
-      </h2>
-    </header>
-
-    <main class="main">
-      <div class="btn game_rock" id="rock"><a class="link" href="/games/rock">Rock - Paper</a></div>
-      <div class="btn game_simon" id="simon"><a class="link" href="/games/simon">Simon - Game</a></div>
-    </main>
-
-    <nav class="nav">
-      <ul class="nav_container">
-        <li class="li_link">
-          <a href="/" class="link link_nav">Home</a>
-        </li>
-        <li class="li_link">
-          <a href="/games" class="link link_nav">Games</a>
-        </li>
-        <li class="li_link">
-          <a href="/#portfolio" class="link link_nav">Portfolio</a>
-        </li>
-        <li class="li_link">
-          <a href="/#about" class="link link_nav">Contact</a>
-        </li>
-      </ul>
-
-    </nav>
-
-    <footer class="footer">
-      <span id="leyend_footer"></span>
-      <p>
-        <a class="link link_footer-login" href="https://twitter.com/GusGusdev" target="_blank"><i
-            class="fab fa-twitter"></i></a>
-        <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
-            class="fab fa-github"></i></a>
-        <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/project-videos" target="_blank">
-            API-Movies Info </a></span>
-      </p>
-      <p>
-        Wallpaper from <a class="link link_footer-login"
-          href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/" target="_blank">Pexels®</a>
-        by <a class="link link_footer-login" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco
-          Ungaro</a>
-      </p>
-    </footer>
 
 
   </body>
