--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -16,11 +16,11 @@
         <h1 class="welcome"> Rock, Paper, Scissors, Lizard & SPOCK </h1>
 
         <div class="rock-paper_pc" id="hand_container_pc">
-          <div class="hand_pc"><i class="far fa-hand-spock ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-lizard ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-rock ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-paper ipc"></i></div>
-          <div class="hand_pc"><i class="far fa-hand-scissors ipc"></i></div>
+          <div class="hand_pc spock"><i class="far fa-hand-spock ipc"></i></div>
+          <div class="hand_pc lizard"><i class="far fa-hand-lizard ipc"></i></div>
+          <div class="hand_pc rock"><i class="far fa-hand-rock ipc"></i></div>
+          <div class="hand_pc paper"><i class="far fa-hand-paper ipc"></i></div>
+          <div class="hand_pc scissors"><i class="far fa-hand-scissors ipc"></i></div>
         </div>
 
       </section>
@@ -48,12 +48,12 @@
                 <tr class="tr plus">
                   <td class="td" colspan="2">
                     <p class="text">Winner: </p>
-                    <p class="text">.:: <span class="inner_text" id="show-winner"></span>::.</p>
+                    <p class="text">.:: <span class="inner_text" id="winner"></span>::.</p>
 
                   </td>
                   <td class="td" colspan="2">
                     <p class="text">Last Move: </p>
-                    <p class="text">.::<span class="inner_text" id="last-move"></span>::.</p>
+                    <p class="text">.::<span class="inner_text" id="lastmove"></span>::.</p>
                   </td>
                 </tr>
                 <tr class="tr">
