--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -36,8 +36,6 @@
           </div>
         </section>
 
-        <section class="section stats">
-        </section>
 
       </main>
 
@@ -69,9 +67,9 @@
               Game </a></span>
         </p>
         <p class="text">
-          Wallpaper from <a class="link" href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/"
+          Wallpaper from <a class="link" href="https://www.pexels.com/photo/black-and-white-checkers-3997813/"
             target="_blank">Pexels®</a>
-          by <a class="link" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco Ungaro</a>
+          by <a class="link" href="https://www.pexels.com/@romakaiuk" target="_blank"> Roman Kaiuk </a>
         </p>
       </footer>
 
