--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -42,16 +42,16 @@
       <nav class="nav">
         <ul class="nav_container">
           <li class="li_link">
-            <a href="/games" class="link">Games</a>
+            <a href="/games" class="link link_nav">Games</a>
           </li>
           <li class="li_link">
-            <a href="/" class="link">Home</a>
+            <a href="/" class="link link_nav">Home</a>
           </li>
           <li class="li_link">
-            <a href="/#portfolio" class="link">Portfolio</a>
+            <a href="/#portfolio" class="link link_nav">Portfolio</a>
           </li>
           <li class="li_link">
-            <a href="/#about" class="link">Contact</a>
+            <a href="/#about" class="link link_nav">Contact</a>
           </li>
         </ul>
 
@@ -62,8 +62,9 @@
         <p class="text social">
           <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
           <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
-          <span class="text">Repo: <a href="https://github.com/gusram01/games/tree/master/games/simon" target="_blank">
-              Rock, Paper...
+          <span class="text">Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/simon"
+              target="_blank">
+              Simon Says...
               Game </a></span>
         </p>
         <p class="text">
