--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -40,11 +40,27 @@
               <thead class="thead">
                 <tr class="tr">
                   <th class="th" colspan="4">
-                    <h2 class="title_table">..::· Game Stats ·::..</h2>
+                    <h2 class="title_table">
+                      ..::· Game Stats ·::..
+                    </h2>
                   </th>
                 </tr>
+                <tr class="tr">
+                  <th class="th">Games</th>
+                  <th class="th">Win</th>
+                  <th class="th">Lose</th>
+                  <th class="th">Tied</th>
+                </tr>
               </thead>
+
               <tbody class="tbody">
+                <tr class="tr">
+                  <td class="td game-stats" id="games">0</td>
+                  <td class="td game-stats" id="win">0</td>
+                  <td class="td game-stats" id="lose">0</td>
+                  <td class="td game-stats" id="tied">0</td>
+                </tr>
+
                 <tr class="tr plus">
                   <td class="td" colspan="2">
                     <p class="text">Winner: </p>
@@ -56,20 +72,7 @@
                     <p class="text">.::<span class="inner_text" id="lastmove"></span>::.</p>
                   </td>
                 </tr>
-                <tr class="tr">
-                  <td class="td">Games</td>
-                  <td class="td">Win</td>
-                  <td class="td">Lose</td>
-                  <td class="td">Tied</td>
-                </tr>
-                <tr>
-                  <td class="td game-stats" id="games">0</td>
-                  <td class="td game-stats" id="win">0</td>
-                  <td class="td game-stats" id="lose">0</td>
-                  <td class="td game-stats" id="tied">0</td>
-                </tr>
-                <tr>
-                </tr>
+
               </tbody>
             </table>
           </div>
@@ -109,7 +112,8 @@
       <p class="text social">
         <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
-        <span class="text">Repo: <a href="https://github.com/gusram01/games/tree/master/games/rock" target="_blank">
+        <span class="text">Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/rock"
+            target="_blank">
             Rock, Paper...
             Game </a></span>
       </p>
