--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -16,11 +16,11 @@
         <h1 class="welcome"> Rock, Paper, Scissors, Lizard & SPOCK </h1>
 
         <div class="rock-paper_pc" id="hand_container_pc">
-          <div class="hand_pc spock"><i class="far fa-hand-spock ipc"></i></div>
-          <div class="hand_pc lizard"><i class="far fa-hand-lizard ipc"></i></div>
-          <div class="hand_pc rock"><i class="far fa-hand-rock ipc"></i></div>
-          <div class="hand_pc paper"><i class="far fa-hand-paper ipc"></i></div>
-          <div class="hand_pc scissors"><i class="far fa-hand-scissors ipc"></i></div>
+          <div class="hand_pc spock"><i class="fas fa-hand-spock ipc"></i></div>
+          <div class="hand_pc lizard"><i class="fas fa-hand-lizard ipc"></i></div>
+          <div class="hand_pc rock"><i class="fas fa-hand-rock ipc"></i></div>
+          <div class="hand_pc paper"><i class="fas fa-hand-paper ipc"></i></div>
+          <div class="hand_pc scissors"><i class="fas fa-hand-scissors ipc"></i></div>
         </div>
 
       </section>
@@ -36,15 +36,29 @@
 
         <div class="stats" id="card-stats">
           <div class="front">
+            <h2 class="title_table" id="winner">
+              Winner
+            </h2>
+            <div class="show_move">
+              <div class="show_inner">
+                Last Move:
+              </div>
+              <div class="show_inner">
+                <p class="text">Player </p>
+                <p class="text"><span class="inner_text" id="lastplayer"></span></p>
+              </div>
+              <div class="show_inner">
+                VS
+              </div>
+              <div class="show_inner">
+                <p class="text">PC </p>
+                <p class="text"><span class="inner_text" id="lastpc"></span></p>
+
+              </div>
+            </div>
             <table class="table">
+
               <thead class="thead">
-                <tr class="tr">
-                  <th class="th" colspan="4">
-                    <h2 class="title_table">
-                      ..::· Game Stats ·::..
-                    </h2>
-                  </th>
-                </tr>
                 <tr class="tr">
                   <th class="th">Games</th>
                   <th class="th">Win</th>
@@ -54,6 +68,7 @@
               </thead>
 
               <tbody class="tbody">
+
                 <tr class="tr">
                   <td class="td game-stats" id="games">0</td>
                   <td class="td game-stats" id="win">0</td>
@@ -61,28 +76,17 @@
                   <td class="td game-stats" id="tied">0</td>
                 </tr>
 
-                <tr class="tr plus">
-                  <td class="td" colspan="2">
-                    <p class="text">Winner: </p>
-                    <p class="text">.:: <span class="inner_text" id="winner"></span>::.</p>
-
-                  </td>
-                  <td class="td" colspan="2">
-                    <p class="text">Last Move: </p>
-                    <p class="text">.::<span class="inner_text" id="lastmove"></span>::.</p>
-                  </td>
-                </tr>
-
               </tbody>
+
             </table>
           </div>
 
           <div class="back">
-            <button class="btn play" id="lizard"><i class="far fa-hand-lizard iplayer"></i></button>
-            <button class="btn play" id="spock"><i class="far fa-hand-spock iplayer"></i></button>
-            <button class="btn play" id="scissors"><i class="far fa-hand-scissors iplayer"></i></button>
-            <button class="btn play" id="paper"><i class="far fa-hand-paper iplayer"></i></button>
-            <button class="btn play" id="rock"><i class="far fa-hand-rock iplayer"></i></button>
+            <button class="btn play" id="lizard"><i class="fas fa-hand-lizard iplayer"></i></button>
+            <button class="btn play" id="spock"><i class="fas fa-hand-spock iplayer"></i></button>
+            <button class="btn play" id="scissors"><i class="fas fa-hand-scissors iplayer"></i></button>
+            <button class="btn play" id="paper"><i class="fas fa-hand-paper iplayer"></i></button>
+            <button class="btn play" id="rock"><i class="fas fa-hand-rock iplayer"></i></button>
           </div>
         </div>
 
@@ -95,7 +99,7 @@
           <a href="/games" class="link">Games</a>
         </li>
         <li class="li_link">
-          <a href="/" class="link">Home</a>
+          <a href="/" class="link">Main</a>
         </li>
         <li class="li_link">
           <a href="/#portfolio" class="link">Portfolio</a>
@@ -109,15 +113,14 @@
 
     <footer class="footer">
       <span id="leyend_footer"></span>
-      <p class="text social">
+      <p>
         <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
-        <span class="text">Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/rock"
-            target="_blank">
+        <span>Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/rock" target="_blank">
             Rock, Paper...
             Game </a></span>
       </p>
-      <p class="text">
+      <p>
         Wallpaper from <a class="link" href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/"
           target="_blank">Pexels®</a>
         by <a class="link" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco Ungaro</a>
