--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -36,8 +36,8 @@
 
         <div class="stats" id="card-stats">
           <div class="front">
-            <h2 class="title_table" id="winner">
-              Winner
+            <h2 class="title_table">Last game: ..::
+              <span class="winner" id="winner">--</span> ::..
             </h2>
             <div class="show_move">
               <div class="show_inner">
@@ -51,7 +51,7 @@
                 VS
               </div>
               <div class="show_inner">
-                <p class="text">PC </p>
+                <p class="text">Pc </p>
                 <p class="text"><span class="inner_text" id="lastpc"></span></p>
 
               </div>
@@ -82,11 +82,11 @@
           </div>
 
           <div class="back">
-            <button class="btn play" id="lizard"><i class="fas fa-hand-lizard iplayer"></i></button>
-            <button class="btn play" id="spock"><i class="fas fa-hand-spock iplayer"></i></button>
-            <button class="btn play" id="scissors"><i class="fas fa-hand-scissors iplayer"></i></button>
-            <button class="btn play" id="paper"><i class="fas fa-hand-paper iplayer"></i></button>
-            <button class="btn play" id="rock"><i class="fas fa-hand-rock iplayer"></i></button>
+            <button class="btn play" id="lizard"><i class="far fa-hand-lizard iplayer"></i></button>
+            <button class="btn play" id="spock"><i class="far fa-hand-spock iplayer"></i></button>
+            <button class="btn play" id="scissors"><i class="far fa-hand-scissors iplayer"></i></button>
+            <button class="btn play" id="paper"><i class="far fa-hand-paper iplayer"></i></button>
+            <button class="btn play" id="rock"><i class="far fa-hand-rock iplayer"></i></button>
           </div>
         </div>
 
