--- a/games/home/index.html
+++ b/games/home/index.html
@@ -43,15 +43,12 @@
       </header>
 
       <main class="main">
-        <div class="btn game_rock" id="rock"><a class="link" href="/games/rock">Rock - Paper</a></div>
-        <div class="btn game_simon" id="simon"><a class="link" href="/games/simon">Simon - Game</a></div>
+        <div class="link_wrapper"><a class="link games" href="/games/rock">Rock - Paper</a></div>
+        <div class="link_wrapper"><a class="link games" href="/games/simon">Simon - Game</a></div>
       </main>
 
       <nav class="nav">
         <ul class="nav_container">
-          <li class="li_link">
-            <a href="/apimovies" class="link link_nav">APInfovies</a>
-          </li>
           <li class="li_link">
             <a href="/" class="link link_nav">Main</a>
           </li>
@@ -69,18 +66,18 @@
         <span id="leyend_footer"></span>
         <p>
           <a class="link link_footer-login" href="https://twitter.com/GusGusdev" target="_blank"><i
-              class="fab fa-twitter"></i></a>
+              class="fab fa-twitter social"></i></a>
           <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
-              class="fab fa-github"></i></a>
+              class="fab fa-github social"></i></a>
           <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/project-videos"
               target="_blank">
               API-Movies Info </a></span>
         </p>
         <p>
           Wallpaper from <a class="link link_footer-login"
-            href="https://www.pexels.com/photo/mosaic-alien-on-wall-1670977/" target="_blank">Pexels®</a>
-          by <a class="link link_footer-login" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco
-            Ungaro</a>
+            href="https://www.pexels.com/es-es/foto/hombre-arte-mano-oscuro-3771083/" target="_blank">Pexels®</a>
+          by <a class="link link_footer-login" href="https://www.pexels.com/es-es/@olly" target="_blank">Andrea
+            Piacquadio</a>
         </p>
       </footer>
 
