prepare for sound

--- a/games/home/index.html
+++ b/games/home/index.html
@@ -69,9 +69,8 @@
               class="fab fa-twitter social"></i></a>
           <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
               class="fab fa-github social"></i></a>
-          <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/project-videos"
-              target="_blank">
-              API-Movies Info </a></span>
+          <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/games" target="_blank">
+              Games Section </a></span>
         </p>
         <p>
           Wallpaper from <a class="link link_footer-login"
