--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -22,6 +22,8 @@
         </h1>
         <div class="change_nick">
           <form class="form_nick">
+            <a href="#top" class="link modal_close">&times;</a>
+
             <div class="form_item">
               <label for="nick">Username</label>
               <input type="text nick" id="nick">
@@ -32,6 +34,11 @@
           </form>
           <table class="history">
             <thead class="thead">
+              <tr class="trow">
+                <th class="thcell wrapper_close" colspan="4">
+                  <a href="#top" class="link modal_close">&times;</a>
+                </th>
+              </tr>
               <tr class="trow">
                 <th class="thcell">User</th>
                 <th class="thcell">Level</th>
@@ -119,6 +126,9 @@
       </footer>
 
     </div>
+    <audio autoplay>
+      <source src="../../assets/wav1.wav" type="audio/wav">
+    </audio>
   </body>
 
 </html>
