--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -16,10 +16,12 @@
     <div class="body_simon">
 
       <header class="header">
-        <button class="btn_history">Show Stats</button>
-        <h1>
-          Simon Says
-        </h1>
+        <div class="btn_header-container">
+          <button class="btn_history">Show Stats</button>
+          <h1>
+            Simon Says
+          </h1>
+        </div>
         <div class="change_nick">
           <form class="form_nick">
             <a href="#top" class="link modal_close">&times;</a>
@@ -126,9 +128,6 @@
       </footer>
 
     </div>
-    <audio autoplay>
-      <source src="../../assets/wav1.wav" type="audio/wav">
-    </audio>
   </body>
 
 </html>
