--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors, Lizard & SPOCK</title>
+    <link rel="preload" href="/assets/audio/wav4.mp3" as="audio" type="audio/mp3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
