--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Says</title>
 
+    <link rel="preload" href="/assets/audio/wav0.mp3" as="audio" type="audio/mp3">
+    <link rel="preload" href="/assets/audio/wav1.mp3" as="audio" type="audio/mp3">
+    <link rel="preload" href="/assets/audio/wav2.mp3" as="audio" type="audio/mp3">
+    <link rel="preload" href="/assets/audio/wav3.mp3" as="audio" type="audio/mp3">
+    <link rel="preload" href="/assets/audio/wav4.mp3" as="audio" type="audio/mp3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
@@ -109,7 +114,7 @@
             <a href="/games" class="link link_nav">Games</a>
           </li>
           <li class="li_link">
-            <a href="/" class="link link_nav">Home</a>
+            <a href="/" class="link link_nav">Main</a>
           </li>
           <li class="li_link">
             <a href="/#portfolio" class="link link_nav">Portfolio</a>
