--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -127,6 +127,7 @@
         by <a class="link" href="https://www.pexels.com/@francesco-ungaro" target="_blank">Francesco Ungaro</a>
       </p>
     </footer>
+    <audio class="audio"></audio>
 
   </body>
 
