--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Says</title>
-
-    <link rel="preload" href="/assets/audio/wav0.mp3" as="audio" type="audio/mp3">
-    <link rel="preload" href="/assets/audio/wav1.mp3" as="audio" type="audio/mp3">
-    <link rel="preload" href="/assets/audio/wav2.mp3" as="audio" type="audio/mp3">
-    <link rel="preload" href="/assets/audio/wav3.mp3" as="audio" type="audio/mp3">
-    <link rel="preload" href="/assets/audio/wav4.mp3" as="audio" type="audio/mp3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cfe24ae6ca.js" crossorigin="anonymous"></script>
@@ -144,6 +138,7 @@
       </footer>
 
     </div>
+    <audio class="audio"></audio>
   </body>
 
 </html>
