adding firebase deploy

--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -97,16 +97,16 @@
     <nav class="nav">
       <ul class="nav_container">
         <li class="li_link">
-          <a href="/games" class="link">Games</a>
+          <a href="/" class="link">Games</a>
         </li>
         <li class="li_link">
-          <a href="/" class="link">Main</a>
+          <a href="https://gusramirez.dev/" class="link">Main</a>
         </li>
         <li class="li_link">
-          <a href="/#portfolio" class="link">Portfolio</a>
+          <a href="https://gusramirez.dev/portfolio" class="link">Portfolio</a>
         </li>
         <li class="li_link">
-          <a href="/#about" class="link">Contact</a>
+          <a href="https://gusramirez.dev/about" class="link">Contact</a>
         </li>
       </ul>
 
