--- a/games/home/index.html
+++ b/games/home/index.html
@@ -43,8 +43,8 @@
       </header>
 
       <main class="main">
-        <div class="link_wrapper"><a class="link games" href="/games/rock">Rock - Paper</a></div>
-        <div class="link_wrapper"><a class="link games" href="/games/simon">Simon - Game</a></div>
+        <div class="link_wrapper"><a class="link games" href="/rock">Rock - Paper</a></div>
+        <div class="link_wrapper"><a class="link games" href="/simon">Simon - Game</a></div>
       </main>
 
       <nav class="nav">
@@ -53,10 +53,10 @@
             <a href="/" class="link link_nav">Main</a>
           </li>
           <li class="li_link">
-            <a href="/#portfolio" class="link link_nav">Portfolio</a>
+            <a href="https://gusramirez.dev/portfolio" class="link link_nav">Portfolio</a>
           </li>
           <li class="li_link">
-            <a href="/#about" class="link link_nav">Contact</a>
+            <a href="https://gusramirez.dev/about" class="link link_nav">Contact</a>
           </li>
         </ul>
 
