--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -105,16 +105,16 @@
       <nav class="nav">
         <ul class="nav_container">
           <li class="li_link">
-            <a href="/games" class="link link_nav">Games</a>
+            <a href="/" class="link link_nav">Games</a>
           </li>
           <li class="li_link">
-            <a href="/" class="link link_nav">Main</a>
+            <a href="https://gusramirez.dev/" class="link link_nav">Main</a>
           </li>
           <li class="li_link">
-            <a href="/#portfolio" class="link link_nav">Portfolio</a>
+            <a href="https://gusramirez.dev/portfolio" class="link link_nav">Portfolio</a>
           </li>
           <li class="li_link">
-            <a href="/#about" class="link link_nav">Contact</a>
+            <a href="https://gusramirez.dev/about" class="link link_nav">Contact</a>
           </li>
         </ul>
 
