updating links games v1.06

--- a/games/rock/rock.html
+++ b/games/rock/rock.html
@@ -106,7 +106,7 @@
           <a href="https://gusramirez.dev/portfolio" class="link">Portfolio</a>
         </li>
         <li class="li_link">
-          <a href="https://gusramirez.dev/about" class="link">Contact</a>
+          <a href="https://gusramirez.dev/contact" class="link">Contact</a>
         </li>
       </ul>
 
@@ -117,7 +117,9 @@
       <p>
         <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
-        <span>Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/rock" target="_blank">
+        <a class="link" href="https://www.linkedin.com/in/gustavo-cesar-ramirez/" target="_blank"><i
+            class="fab fa-linkedin social"></i></a>
+        <span>Repo: <a class="link" href="https://github.com/gusram01/games/tree/vanilla/games/rock" target="_blank">
             Rock, Paper...
             Game </a></span>
       </p>
