--- a/games/simon/simon.html
+++ b/games/simon/simon.html
@@ -105,19 +105,17 @@
       <nav class="nav">
         <ul class="nav_container">
           <li class="li_link">
-            <a href="/" class="link link_nav">Games</a>
+            <a href="/" class="link">Games</a>
           </li>
           <li class="li_link">
-            <a href="https://gusramirez.dev/" class="link link_nav">Main</a>
+            <a href="https://gusramirez.dev/" class="link">Main</a>
           </li>
           <li class="li_link">
-            <a href="https://gusramirez.dev/portfolio" class="link link_nav">Portfolio</a>
+            <a href="https://gusramirez.dev/portfolio" class="link">Portfolio</a>
           </li>
           <li class="li_link">
-            <a href="https://gusramirez.dev/about" class="link link_nav">Contact</a>
+            <a href="https://gusramirez.dev/contact" class="link">Contact</a>
           </li>
-        </ul>
-
       </nav>
 
       <footer class="footer">
@@ -125,7 +123,9 @@
         <p class="text social">
           <a class="link" href="https://twitter.com/GusGusdev" target="_blank"><i class="fab fa-twitter"></i></a>
           <a class="link" href="https://github.com/gusram01" target="_blank"><i class="fab fa-github"></i></a>
-          <span class="text">Repo: <a class="link" href="https://github.com/gusram01/games/tree/master/games/simon"
+          <a class="link" href="https://www.linkedin.com/in/gustavo-cesar-ramirez/" target="_blank"><i
+              class="fab fa-linkedin social"></i></a>
+          <span class="text">Repo: <a class="link" href="https://github.com/gusram01/games/tree/vanilla/games/simon"
               target="_blank">
               Simon Says...
               Game </a></span>
