--- a/games/home/index.html
+++ b/games/home/index.html
@@ -50,13 +50,13 @@
       <nav class="nav">
         <ul class="nav_container">
           <li class="li_link">
-            <a href="/" class="link link_nav">Main</a>
+            <a href="https://gusramirez.dev" class="link link_nav">Main</a>
           </li>
           <li class="li_link">
             <a href="https://gusramirez.dev/portfolio" class="link link_nav">Portfolio</a>
           </li>
           <li class="li_link">
-            <a href="https://gusramirez.dev/about" class="link link_nav">Contact</a>
+            <a href="https://gusramirez.dev/contact" class="link link_nav">Contact</a>
           </li>
         </ul>
 
@@ -69,7 +69,10 @@
               class="fab fa-twitter social"></i></a>
           <a class="link link_footer-login" href="https://github.com/gusram01" target="_blank"><i
               class="fab fa-github social"></i></a>
-          <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/games" target="_blank">
+          <a class="link" href="https://www.linkedin.com/in/gustavo-cesar-ramirez/" target="_blank"><i
+              class="fab fa-linkedin social"></i></a>
+          <span>Repo: <a class="link link_footer-login" href="https://github.com/gusram01/games/tree/vanilla"
+              target="_blank">
               Games Section </a></span>
         </p>
         <p>
